--- a/package.json
+++ b/package.json
@@ -8,10 +8,21 @@
   "scripts": {
     "build": "tsup index.ts --format cjs,esm --dts --clean",
     "release": "tsup index.ts --format cjs,esm --dts && changeset publish",
-    "lint": "tsc"
+    "lint": "tsc",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
+    "@chromatic-com/storybook": "^1.3.3",
+    "@storybook/addon-essentials": "^8.0.8",
+    "@storybook/addon-links": "^8.0.8",
+    "@storybook/blocks": "^8.0.8",
+    "@storybook/test": "^8.0.8",
+    "@storybook/web-components": "^8.0.8",
+    "@storybook/web-components-vite": "^8.0.8",
+    "lit": "^3.1.3",
+    "storybook": "^8.0.8",
     "tsup": "^6.7.0",
     "typescript": "^4.9.5"
   }
